# MasterThesis_Tracker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
examples/: CMakeLists.txt  evaluate_rbot_dataset.cpp  run_on_recorded_sequence.cpp
include/rbgt/: camera.h  common.h  tracker.h  webcam.h
src/: CMakeLists.txt  camera.cpp  common.cpp  dataset_rbot_camera.cpp  image_loader_camera.cpp  model.cpp  region_modality.cpp  renderer_geometry.cpp  tracker.cpp  webcam.cpp
tracking/: CMakeLists.txt  test.cpp  tracking.cpp  tracking.h
